# jwt-api

./: .gitignore  Cargo.toml
src/: app.rs  application.rs  authorization.rs  configuration.rs  lib.rs  main.rs  server.rs  telemetry.rs
src/app/: app_auth.rs  app_service_config.rs  back_end.rs  mod.rs
src/app/back_end/: mod.rs  module_auth.rs  module_service_config.rs
src/app/back_end/admin_module/: api.rs
src/app/back_end/admin_module/api/: mod.rs
src/app/back_end/auth_module/: api.rs
src/app/back_end/auth_module/api/: actions.rs  auth_service_config.rs  models.rs  routes.rs
src/app/back_end/auth_module/api/actions/: login_actions.rs
src/app/back_end/auth_module/api/models/: auth_models.rs
src/app/back_end/auth_module/api/routes/: mod.rs
src/app/shared/: models.rs
src/app/shared/models/: auth_models.rs  response_models.rs
src/app_services/: app_service_config.rs  mod.rs
src/app_services/back_end/: module_service_config.rs
src/app_services/back_end/admin_module/api/: admin_service_config.rs
src/app_services/back_end/admin_module/api/routes/: status.rs
src/app_services/back_end/auth_module/: mod.rs  version_service_config.rs
src/app_services/back_end/auth_module/api/: auth_service_config.rs  mod.rs
src/app_services/back_end/auth_module/api/routes/: login_routes.rs
src/services/: mod.rs  service_config.rs
src/services/back_end/admin_module/: version_service_config.rs
src/services/back_end/admin_module/api/routes/: mod.rs
