[package]
name = "jwt-api"
version = "0.1.0"
authors = ["Nicholas Jorgenson"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "jwt-api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
actix-web-grants = "4"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
jsonwebtoken = "9"
chrono = "0.4"

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate"
]}

tracing = {version = "0.1", features = ["attributes"]}
tracing-log = "0.2"
tracing-futures = "0.2"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-actix-web = {version = "0.7", features = ["uuid_v7"]}

serde = {version = "1", features = ["derive"]}
serde_json = "1"
config = {version = "0.15", features = ["yaml"]}
secrecy = {version = "0.10", features = ["serde"]}

